--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="header-wrapper">
                 <div>
-                    <p class="header-item">Ertan Emirhan</p>
+                    <p class="header-item">Azizbek</p>
                 </div>
                 <nav class="nav">
                     <ul class="nav-menu">
