--- a/index.html
+++ b/index.html
@@ -169,6 +169,21 @@
                             <span class="progress-text">75%</span>
                         </div>
                     </div>
+                    <div class="skill-card">
+                        <div class="skill-icon">
+                            <span class="skill-symbol"> <img class="rounded"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgN0XMICMqZu3i-AThVKp3UW75xZ800bJx2A&s"
+                                    alt=""></span>
+                        </div>
+                        <h3 class="skill-title">AOS</h3>
+                        <p class="skill-description">CSS animatsiyalar Kutbxonalar </p>
+                        <div class="skill-progress">
+                            <div class="progress-bar">
+                                <div class="progress-fill" data-width="75%"></div>
+                            </div>
+                            <span class="progress-text">75%</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
