--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                     </div>
                     <div class="skill-card">
                         <div class="skill-icon">
-                            <span class="skill-symbol"> <img class="rounded"
+                            <span class="skill-symbol">
+                                <img class="rounded"
                                     src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgN0XMICMqZu3i-AThVKp3UW75xZ800bJx2A&s"
                                     alt=""></span>
                         </div>
