--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <li>
                             <a href="#contact" class="nav-link">Aloqa</a>
                         </li>
+                        <li>
+                            <img src="" alt="">
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -351,6 +354,10 @@
 
         <section id="contact" class="contact">
             <div class="container">
+                <div class="flex-wrap-wrap">
+
+                </div>
+
                 <div class="section-header">
                     <h2 class="section-title">Bog'lanish</h2>
                     <p class="section-subtitle">Keling, birgalikda loyiha ustida ishlaymiz</p>
@@ -385,7 +392,7 @@
                         </div>
                     </div>
                     <div class="contact-form">
-                        <form>
+                        <form class="input-box">
                             <div class="form-group">
                                 <input type="text" class="form-input" placeholder="Ismingiz" required>
                             </div>
